src/style.sass
@import colors

.icon
  display: inline-block
  margin:
    right: 6px
  font-size: 1em
  vertical-align: baseline
  &.error
    img
      opacity: 0
  svg
    transform: translateZ(0)
.favicon
  &, img
    width: 16px
    height: 16px


.input
  font-size: 1rem
  margin-left: 0
  padding: 6px 10px
  background: #fff padding-box
  border: 1px solid currentcolor
  border-radius: 3px
  border-color: hsla(210,54%,20%,.15) hsla(210,54%,20%,.17) hsla(210,54%,20%,.2)
  box-shadow: 0 1px 0 hsla(210,65%,9%,.02) inset, 0 0 2px hsla(210,65%,9%,.1) inset, 0 1px 0 hsla(0,0%,100%,.2)
  color: inherit
  unicode-bidi: plaintext
  &:focus
    border-color: $Blue50
    //box-shadow: 0 0 0 1px $Blue50

  &::-moz-selection
    background-color: $Blue40
    color: #fff

.key
  color: $Blue60
  border: 1px solid $Blue60
  font-weight: 600
  border-radius: 2px
  padding: 3px 5px

h1
  font-weight: normal
  font-size: 24px
  color: $text2

h2
  color: $Grey60
h3
  font-weight: bold
  font-size: 15px
  color: $text2
  border-bottom: 1px solid #ddd
  text-transform: uppercase

.row
  display: flex

.flex-1
  flex: 1

.ellipsis
  overflow: hidden
  text-overflow: ellipsis
  white-space: nowrap
  word-break: keep-all

.message
  position: fixed
  right: 2rem
  bottom: 1rem
  width: 30rem
  min-height: 3rem
  padding: .5rem
  background: $Grey20
  border-radius: 2px
  display: flex
  align-items: center
  justify-content: space-between
  * + *
    margin-left: .5em
  transition: bottom .5s
  &:not(.active)
    bottom: -3rem
.button
  display: inline-block
  padding: .3em .5em
  border-radius: 2px
  background: $Blue60
  color: $Grey10
  font-weight: 600
  text-transform: uppercase
  cursor: pointer
  &:hover
    background: $Blue70
  &:focus, &:active
    background: $Blue80

